format for tutorial-title ribbon issue on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -632,7 +632,7 @@ div.tutorial-show {
 		height: 35px;
 	}
 
-	.tutorial-title {
+	.tutorial-show .tutorial-title {
 		padding-top: 25px;
 	}
 }
